--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@
         }
 
         .dark-mode-toggle {
-            position: fixed;
+            position: absolute;
             top: 20px;
             right: 20px;
             background: rgba(255, 255, 255, 0.2);
