--- a/style.css
+++ b/style.css
@@ -42,9 +42,10 @@
         @media (max-width: 480px) {
             body {
                 padding: 10px;
-                padding-top: 70px;
+                padding-top: 80px;
                 /* Space untuk buttons */
                 padding-bottom: 20px;
+                align-items: flex-start;
             }
         }
 
@@ -259,6 +260,12 @@
                 width: 20px;
                 height: 20px;
             }
+        }
+
+        @media (max-width: 360px){
+                .install-button {
+                        display: none !important;
+                }
         }
 
         .install-prompt {
